--- a/index.html
+++ b/index.html
@@ -102,5 +102,183 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
     </div>
+    <div class="choise">
+    <div class="contaner">
+         <div class="main_classes">
+              <div class="first">
+                   <img src="img_1.png" class="foto_1">
+                   <div class="item_1"><h4>WEIGHTLIFTING</h4>
+                   <div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                   </div>
+                   </div>
+              </div>
+              <div class="second">
+                   <img src="img_2.png" class="foto_2">
+                   <div class="item_1"><h4>INDOOR CYCLING</h4>
+                   <div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                   </div>
+                  </div>
+              </div>
+              <div class="third">
+                   <img src="img_3.png" class="foto_3">
+                   <div class="item_1"><h4>CORE POWER</h4>
+                   <div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </div>
+                  </div>
+          </div>
+    </div>
+    <div class="btn_3">
+         <button>
+             Discover more
+         </button>
+    </div>
+    </div>
+    <div class="up_level">
+         <div class="contaner">
+              <h3>
+                  PARTNER<br>
+                  UP-DOUBLE POWER
+              </h3>
+              <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
+                  Voluptatibus ipsa, repellat exercitationem, laudantium aperiam error<br>
+                  quaerat blanditiis quam quasi molestias ea, iste numquam alias culpa<br>
+                  eveniet consequatur rerum neque cupiditate.<br>
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
+                Voluptatibus ipsa, repellat exercitationem, laudantium aperiam error<br>
+                quaerat blanditiis quam quasi molestias ea, iste numquam alias culpa<br>
+                eveniet consequatur rerum neque cupiditate.<br>
+            </p>
+            <div class="btn_4">
+                 <button>
+                     Contact us
+                 </button>
+            </div>
+         </div>
+    </div>
+    <div class="about">
+         <h2>OUR PRICE</h2>
+         <div>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         </div>
+    </div>
+    <div class="price">
+         <div class="contaner">
+              <div class="plans">
+              <div class="first_1">
+              <div class="beginner">
+              <div style="font-size: 18px; color: #fff; margin-top: 10px;">
+                   BEGINNER PLAN
+              </div>
+              <div style="font-size: 22px; color: #fff; margin-top: 10px;">
+                   40$
+              </div>
+              <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                   3 classes per week
+              </div>
+              <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                   One year memberships
+              </div>
+              <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                   Free drinking package
+              </div>
+              <div style="color: #fe6508; margin-top: 10px; margin-bottom: 10px;">
+                   1 free personal training
+              </div>
+              </div>
+              <div class="btn_5">
+                   <button>
+                       Select plan
+                   </button>
+              </div>
+              </div>
+              <div class="second_1">
+                <div class="premium">
+                <div style="font-size: 18px; color: #fff; margin-top: 10px;">
+                     PREMIUM PLAN
+                </div>
+                <div style="font-size: 22px; color: #fff; margin-top: 10px;">
+                     60$
+                </div>
+                <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                     Access to the gym
+                </div>
+                <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                     One year memberships
+                </div>
+                <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                     Free drinking package
+                </div>
+                <div style="color: #fe6508; margin-top: 10px; margin-bottom: 10px;">
+                     1 free personal training
+                </div>
+                </div>
+                <div class="btn_5">
+                     <button>
+                         Select plan
+                     </button>
+                </div>
+                </div>
+                <div class="third_1">
+                    <div class="beginner_1">
+                    <div style="font-size: 18px; color: #fff; margin-top: 10px;">
+                         BEGINNER PLAN
+                    </div>
+                    <div style="font-size: 22px; color: #fff; margin-top: 10px;">
+                         40$
+                    </div>
+                    <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                         Access to the gym
+                    </div>
+                    <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                         One year memberships
+                    </div>
+                    <div style="font-size: 14px; color: #fff; margin-top: 10px;">
+                         Free drinking package
+                    </div>
+                    <div style="color: #fe6508; margin-top: 10px; margin-bottom: 10px;">
+                         1 free personal training
+                    </div>
+                    </div>
+                    <div class="btn_5">
+                         <button>
+                             Select plan
+                         </button>
+                    </div>
+                    </div>
+              </div>
+         </div>
+    </div>
+    <div class="contacts">
+         <h2>CONTACT US</h2>
+         <div>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         </div>
+    </div>
+    <form>
+         <h3>
+              REQEST A CALL BACK
+         </h3>
+         <label for="name"></label>
+         <input class="first_input" type="text" placeholder="name" value="NAME">
+         <hr noshade width="400px">
+         <label for="email"></label>
+         <input class="second_input" type="email" placeholder="email" value="EMAIL">
+         <hr noshade width="400px">
+         <label for="phone"></label>
+         <input class="third_input" type="tel" placeholder="phone" value="NUMBER">
+         <hr noshade width="400px">
+         <div class="btn_6">
+              <button>
+                   SEND
+              </button>
+         </div>
+    </form>
+    <hr class="line">
 </body>
 </html>
