--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
     <title>GYM-PROJECT</title>
 </head>
 <body>
     <div class="head">
-    <div class="contaner">
+    <div class="container">
          <div class="nav">
               <img src="logo.png" class="logo">
               <ul class="menu">
@@ -64,7 +64,7 @@
          </div>
     </div>
     <div class="content">
-         <div class="contaner">
+         <div class="container">
          <div class="description_2">
              <div class="left_content">
                   <h3>
@@ -103,7 +103,7 @@
         </div>
     </div>
     <div class="choise">
-    <div class="contaner">
+    <div class="container">
          <div class="main_classes">
               <div class="first">
                    <img src="img_1.png" class="foto_1">
@@ -137,7 +137,7 @@
     </div>
     </div>
     <div class="up_level">
-         <div class="contaner">
+         <div class="container">
               <h3>
                   PARTNER<br>
                   UP-DOUBLE POWER
@@ -168,7 +168,7 @@
          </div>
     </div>
     <div class="price">
-         <div class="contaner">
+         <div class="container">
               <div class="plans">
               <div class="first_1">
               <div class="beginner">
@@ -281,7 +281,7 @@
     </form>
     <hr class="line">
     <div class="footer">
-         <div class="contener">
+         <div class="container">
               <ul class="wrapper">
                   <li class="map">
                       <img style="padding-right: 10px;" src="Group.png">
